[package]
name = "testcall"
version = "1.1.0"
edition = "2018"
description = "companinon crate to bintest, implements test facilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/testcall.git"
keywords = ["testing"]

[dependencies]
bintest = "1.0"
testpath = "0.1.1"
regex = "1"

[badges]
maintenance = { status = "actively-developed" }
